<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical">
    <TextView
            android:text="@string/bull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginBullLogo"
            android:fontFamily="@font/nunito_black"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="20dp"/>
    <TextView
            android:text="@string/e_posta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginEmailLabel"
            android:textColor="#adb5bd"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/nunito_semibold"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/loginEmail"
            android:backgroundTint="#f1f3f5"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/nunito_semibold"
            android:importantForAutofill="no"
            tools:targetApi="o"
            tools:ignore="LabelFor"/>
    <TextView
            android:text="@string/fre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginPasswordLabel"
            android:textColor="#adb5bd"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/nunito_semibold"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/loginPassword"
            android:backgroundTint="#f1f3f5"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/nunito_semibold"
            android:importantForAutofill="no"
            tools:targetApi="o"
            tools:ignore="LabelFor"/>
    <Button
            android:text="@string/giri_yap"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:id="@+id/loginLoginButton"
            android:fontFamily="@font/nunito_black"
            android:textAllCaps="false"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="#fff"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:onClick="login"/>
    <TextView
            android:text="@string/ya_da"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginOrLabel"
            android:textColor="#adb5bd"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/nunito_semibold"/>
    <TextView
            android:text="@string/kay_t_ol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginRegisterLink"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:onClick="nextScreenRegister"
            android:fontFamily="@font/nunito_semibold"/>
</LinearLayout>