<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical">
    <TextView
            android:text="@string/bull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerBullLogo"
            android:fontFamily="@font/nunito_black"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="20dp"/>
    <TextView
            android:text="@string/e_posta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerEmailLabel"
            android:textColor="#adb5bd"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/nunito_semibold"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/registerEmail"
            android:backgroundTint="#f1f3f5"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/nunito_semibold"
            android:autofillHints="email"
            tools:ignore="LabelFor"
            tools:targetApi="o"/>
    <TextView
            android:text="@string/g_r_nen_ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerDisplayNameLabel"
            android:textColor="#adb5bd"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/nunito_semibold"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/registerDisplayName"
            android:backgroundTint="#f1f3f5"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/nunito_semibold"
            android:importantForAutofill="no"
            tools:targetApi="o"
            tools:ignore="LabelFor"/>
    <TextView
            android:text="@string/fre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerPasswordLabel"
            android:textColor="#adb5bd"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/nunito_semibold"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/registerPassword"
            android:backgroundTint="#f1f3f5"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/nunito_semibold"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"
            tools:targetApi="o"/>
    <Button
            android:text="@string/kay_t_ol"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:id="@+id/registerRegisterButton"
            android:fontFamily="@font/nunito_black"
            android:textAllCaps="false"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="#fff"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:onClick="register"/>
    <TextView
            android:text="@string/hesab_n_var_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerHaveAccountLabel"
            android:textColor="#adb5bd"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/nunito_semibold"/>
    <TextView
            android:text="@string/giri_yap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerLoginLink"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:onClick="nextScreenLogin"
            android:fontFamily="@font/nunito_semibold"/>
</LinearLayout>